# habit-tracker

./: .env.template  .gitlab-ci.yml  README.md  deploy.sh  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: apps.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
